--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamFightTacticDex">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TeamFightTacticDex.NoActionBar">
+            android:theme="@style/Theme.TeamFightTacticDex">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Needed for UI tests -->
+        <activity
+            android:name="androidx.activity.ComponentActivity"
+            android:theme="@style/Theme.TeamFightTacticDex" />
     </application>
 
 </manifest>
