--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -39,18 +39,28 @@ android {
         kotlinCompilerExtensionVersion = "0.1.0-dev12"
     }
 }
-
+configurations {
+    ktlint
+}
 dependencies {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
+    implementation("androidx.compose:compose-runtime:$compose_version")
+    implementation("androidx.ui:ui-core:$compose_version")
+    implementation("androidx.ui:ui-layout:$compose_version")
+    implementation("androidx.ui:ui-material:$compose_version")
+    implementation("androidx.ui:ui-material-icons-extended:$compose_version")
+    implementation("androidx.ui:ui-foundation:$compose_version")
+    implementation("androidx.ui:ui-animation:$compose_version")
+    implementation "androidx.ui:ui-tooling:$compose_version"
+    implementation('androidx.appcompat:appcompat:1.1.0')
+    implementation('androidx.activity:activity-ktx:1.1.0')
+    implementation "androidx.core:core-ktx:1.3.0"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-//    implementation 'androidx.ui:ui-framework:0.1.0-dev09'
-    implementation 'androidx.ui:ui-layout:0.1.0-dev12'
-    implementation 'androidx.ui:ui-material:0.1.0-dev12'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev12'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation("junit:junit:4.13")
+    androidTestImplementation("androidx.test:rules:1.2.0")
+    androidTestImplementation("androidx.test:runner:1.2.0")
+    androidTestImplementation("androidx.ui:ui-core:$compose_version")
+    androidTestImplementation("androidx.ui:ui-test:$compose_version")
+
+    ktlint 'com.pinterest:ktlint:0.37.0'
 }
